# Four-Year-Planner

./: 1  README.md  main.py  pyproject.toml  ui_program.py
data/: course_catalog.npy  majors.npy  majors_list.npy  minors.npy  minors_list.npy
data_prep/: all_grad_reqs.py  course_catalog.py  majors_df.py  majors_n_minors.py
src/: get_courses.py  ui_program.py
