[project]
name = "four-year-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bs4>=0.0.2",
    "dash>=3.0.4",
    "ipython>=8.18.1",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "plotly>=6.0.1",
    "selenium>=4.32.0",
]
